# Neuro

./: CMakeLists.txt  FitnessFunction.md  InstructionSet.md  README.md
include/Neuro/: action.h  alphabet.h  data.h  instruction.h  labeller.h  network.h  neuron.h  random.h  state.h
include/Neuro/dsl/: lexer.h  parser.h  token.h
include/Neuro/ea/: ea.h  fitness.h
include/Neuro/vm/: vm.h
src/: CMakeLists.txt  action.cpp  emit.cpp  instruction.cpp  main.cpp  network.cpp  neuron.cpp  state.cpp
src/dsl/: README.md  lexer.cpp  parser.cpp  token.cpp
src/dsl/samples/: and.neu  atoi.neu  bitwise.neu  itoa.neu  jump.neu  lls.neu  not.neu  or.neu  ras.neu  rls.neu  send.neu  xor.neu
src/ea/: ea.cpp  fitness.cpp
src/ea/samples/: CMakeLists.txt
src/ea/samples/absolute/: absolute.cpp
src/ea/samples/calculator/: calculator.cpp
src/ea/samples/not/: not.cpp
src/vm/: vm.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  action.cpp  instruction.cpp  network.cpp  neuron.cpp  state.cpp
